cmake_minimum_required(VERSION 3.13)

include_directories(../include)

find_package(GTest REQUIRED)
enable_testing()

macro(make_units_test name)
    add_executable(${name} utl/${name}.cpp)
    target_link_libraries(${name} GTest::GTest GTest::Main)
    add_test(NAME ${name} COMMAND ${name})
endmacro()

make_units_test(t_base_amount_of_substance)
make_units_test(t_base_electric_current)
make_units_test(t_base_length)
make_units_test(t_base_luminous_intensity)
make_units_test(t_base_mass)
make_units_test(t_base_thermodynamic_temperature)
make_units_test(t_base_time)
make_units_test(t_base_unit)

make_units_test(t_derived_absorbed_dose)
make_units_test(t_derived_acceleration)
make_units_test(t_derived_activity)
make_units_test(t_derived_angle)
make_units_test(t_derived_area)
make_units_test(t_derived_capacitance)
make_units_test(t_derived_catalytic_activity)
make_units_test(t_derived_conductance)
make_units_test(t_derived_dose_equivalent)
make_units_test(t_derived_electric_charge)
make_units_test(t_derived_energy)
make_units_test(t_derived_force)
make_units_test(t_derived_frequency)
make_units_test(t_derived_illuminance)
make_units_test(t_derived_inductance)
make_units_test(t_derived_luminous_flux)
make_units_test(t_derived_magnetic_flux)
make_units_test(t_derived_magnetic_flux_density)
make_units_test(t_derived_power)
make_units_test(t_derived_pressure)
make_units_test(t_derived_resistance)
make_units_test(t_derived_solid_angle)
make_units_test(t_derived_velocity)
make_units_test(t_derived_voltage)
make_units_test(t_derived_volume)
